<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toor_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textSize="16sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFileName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:paddingLeft="6dp" />
        <Button
            android:id="@+id/btChoiceFile"
            android:layout_width="56dp"
            android:text="@string/choice"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="wrap_content"
        android:maxWidth="160dp"
        android:layout_gravity="center"
        android:layout_height="200dp"
        android:maxHeight="200dp"
        />
    <VideoView
        android:id="@+id/video_preview"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_height="200dp"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/edit_bg"
            android:paddingLeft="6dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtTime"
            android:layout_width="100dp"

            android:inputType="number"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/edit_bg"
            android:paddingLeft="6dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="秒/s"
            android:layout_marginLeft="16dp"
            android:textSize="16sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>